--- a/.github/workflows/copyDocument.yaml
+++ b/.github/workflows/copyDocument.yaml
@@ -19,10 +19,10 @@ jobs:
           run : find docs/esterni/ -name '*.pdf' -exec cp {} public/esterni \;
 
         - name: Copia dei Verbali Interni
-          run : find docs/verbali/interni/ -name '*.pdf' -exec cp {} public/interni/verbali \;
+          run : find docs/interni/verbali -name '*.pdf' -exec cp {} public/interni/verbali \;
 
         - name: Copia dei Verbali Esterni
-          run : find docs/verbali/esterni/ -name '*.pdf' -exec cp {} public/esterni/verbali \;
+          run : find docs/esterni/verbali -name '*.pdf' -exec cp {} public/esterni/verbali \;
 
         - name: Commit dei File
           run : |
