--- a/.github/workflows/copyDocument.yaml
+++ b/.github/workflows/copyDocument.yaml
@@ -12,17 +12,17 @@ jobs:
 
         - name: Aggiornamento del sistema
           run: |
-            apt-get update -y
-            apt-get upgrade -y
+            sudo apt-get update -y
+            sudo apt-get upgrade -y
 
 
         - name: Installazione di apt-utils
-          run:  apt-get install -y apt-utils
+          run:  sudo apt-get install -y apt-utils
         
         - name: Installazione di Git
           run:  |
-                  apt-get update -y
-                  apt-get install git -y
+                  sudo apt-get update -y
+                  sudo apt-get install git -y
 
         - name: Copia dei File
           uses: actions/checkout@v2
