--- a/.github/workflows/copyDocument.yaml
+++ b/.github/workflows/copyDocument.yaml
@@ -51,3 +51,4 @@ jobs:
           uses: ad-m/github-push-action@master
           with:
             branch: 83-action
+            github_token: ${{ secrets.GITHUB_TOKEN }}
