--- a/.github/workflows/copyDocument.yaml
+++ b/.github/workflows/copyDocument.yaml
@@ -52,4 +52,4 @@ jobs:
           with:
             branch: 83-action
             github_token: ${{ secrets.GITHUB_TOKEN }}
-            github-url: https://github.com/4ourSquared/LumosMinima
+            github_url: https://github.com/4ourSquared/LumosMinima
