Revert "rimosso url"
This reverts commit 7ff98c51bea2de09e1511e3881c6db8765ff782d.

--- a/.github/workflows/copyDocument.yaml
+++ b/.github/workflows/copyDocument.yaml
@@ -52,3 +52,4 @@ jobs:
           with:
             branch: 83-action
             github_token: ${{ secrets.GITHUB_TOKEN }}
+            github_url: https://github.com/4ourSquared/LumosMinima
