--- a/.github/workflows/copyDocument.yaml
+++ b/.github/workflows/copyDocument.yaml
@@ -1,5 +1,6 @@
 name: Copia dei File Generati
 
+# Avvio dell'azione solamente qualora avvenisse un push
 on: [push]
 
 jobs:
@@ -11,18 +12,23 @@ jobs:
         - name: Copia dei File
           uses: actions/checkout@v2
 
+          # Copia dei documenti interni (non verbali)
         - name: Copia dei Documenti Interni
           run : find docs/interni/ -maxdepth 1 -name '*.pdf' -exec cp {} public/interni \;
 
+          # Copia dei documenti esterni (non verbali)
         - name: Copia dei Documenti Esterni
           run : find docs/interni/ -maxdepth 1 -name '*.pdf' -exec cp {} public/interni \;
 
+          # copia dei soli verbali interni
         - name: Copia dei Verbali Interni
           run : find docs/interni/verbali/ -maxdepth 1 -name '*.pdf' -exec cp {} public/interni/verbali \;
 
+          #copia dei soli verbali esterni
         - name: Copia dei Verbali Esterni
           run : find docs/esterni/verbali/ -maxdepth 1 -name '*.pdf' -exec cp {} public/esterni/verbali \;
 
+          # commit dei file creati e/o modificati (se presenti)
         - name: Commit dei File
           run : |
             git config --local user.email "action@github.com"
@@ -31,6 +37,7 @@ jobs:
             git add *.pdf
             git commit -m "Aggiornamento Automatico Documenti"
 
+          # push dei file creati e/o modificati (se presenti)
         - name: Push dei File
           uses: ad-m/github-push-action@master
           with:
