--- a/.github/workflows/copyDocument.yaml
+++ b/.github/workflows/copyDocument.yaml
@@ -14,6 +14,9 @@ jobs:
         - name: Copia dei File
           uses: actions/checkout@v2
 
+        - name: Pull dei File
+          run : git pull
+
           # Copia dei documenti interni (non verbali)
         - name: Copia dei Documenti Interni
           run : find docs/interni/ -maxdepth 1 -name '*.pdf' -exec cp {} public/interni \;
