--- a/.github/workflows/copyDocument.yaml
+++ b/.github/workflows/copyDocument.yaml
@@ -46,4 +46,5 @@ jobs:
         - name: Push dei File
           uses: ad-m/github-push-action@master
           with:
+            branch: 83-action
             github_token: ${{ secrets.GITHUB_TOKEN }}
